tests/semantica/valid/metodos/test1.ctds
program 
	{
        integer foo(){
            return 2;
        }

        void main(){
            foo();
        }
    }